sonar: JNI mandates extra parameters (+cosmetics)

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,7 +13,7 @@ sonar.sources=src,examples,include,teshsuite
 
 
 # Disable some rules on some files
-sonar.issue.ignore.multicriteria=j1,c1,c2,c3,c4
+sonar.issue.ignore.multicriteria=j1,jni1,jni2,jni3,c1,c2
 
 # The Object.finalize() method should not be overriden
 # But we need to clean the native memory with JNI
@@ -22,23 +22,28 @@ sonar.issue.ignore.multicriteria.j1.resourceKey=**/*.java
 
 # "reinterpret_cast" should not be used
 # But this is exactly intended to store a pointer into a long -- what we do here
-sonar.issue.ignore.multicriteria.c1.ruleKey=cpp:S3630
-sonar.issue.ignore.multicriteria.c1.resourceKey=src/bindings/java/*.cpp
+sonar.issue.ignore.multicriteria.jni1.ruleKey=cpp:S3630
+sonar.issue.ignore.multicriteria.jni1.resourceKey=src/bindings/java/*.cpp
 
 # Pointers should not be cast to integral types
 # But we need that for jMSG
-sonar.issue.ignore.multicriteria.c2.ruleKey=cpp:S1767
-sonar.issue.ignore.multicriteria.c2.resourceKey=**/*.cpp
+sonar.issue.ignore.multicriteria.jni2.ruleKey=cpp:S1767
+sonar.issue.ignore.multicriteria.jni2.resourceKey=src/bindings/java/*.cpp
+
+# Unused function parameters should be removed
+# But JNI mandates these parameters
+sonar.issue.ignore.multicriteria.jni3.ruleKey=cpp:S1172
+sonar.issue.ignore.multicriteria.jni3.resourceKey=src/bindings/java/*.cpp
 
 # Preprocessor operators "#" and "##" should not be used
 # This poses portability issues, but we check our usage on a large panel of architectures on purpose
-sonar.issue.ignore.multicriteria.c3.ruleKey=cpp:PPStringifyAndPastingUsage
-sonar.issue.ignore.multicriteria.c3.resourceKey=**/*.cpp
+sonar.issue.ignore.multicriteria.c1.ruleKey=cpp:PPStringifyAndPastingUsage
+sonar.issue.ignore.multicriteria.c1.resourceKey=**/*.cpp
 
 # Macro names should comply with a naming convention
 # But the macros in this file are named after the MPI standard
-sonar.issue.ignore.multicriteria.c4.ruleKey=c:PPMacroName
-sonar.issue.ignore.multicriteria.c4.resourceKey=include/smpi/smpi_extended_traces.h
+sonar.issue.ignore.multicriteria.c2.ruleKey=c:PPMacroName
+sonar.issue.ignore.multicriteria.c2.resourceKey=include/smpi/smpi_extended_traces.h
 
 
 
