another try at having coverage info on travis, for sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -78,6 +78,10 @@ sonar.issue.ignore.allfile.flexMLGenerated.fileRegexp="generated with the FleXML
 # The build-wrapper output dir
 sonar.cfamily.build-wrapper-output=bw-outputs
 
+# Where the coverage files are located
+# See https://docs.sonarqube.org/pages/viewpage.action?pageId=5312222
+sonar.cfamily.gcov.reportsPath=Testing/CoverageInfo
+
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
 
