sonar: ignore coverage on XML files (and some others)

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -81,6 +81,10 @@ sonar.cfamily.build-wrapper-output=bw-outputs
 # Where the coverage files are located
 # See https://docs.sonarqube.org/pages/viewpage.action?pageId=5312222
 sonar.cfamily.gcov.reportsPath=Testing/CoverageInfo
+# Files to ignore from coverage analysis:
+#   - foreign test suites
+#   - xml files
+sonar.coverage.exclusions=teshsuite/smpi/isp/**,teshsuite/smpi/mpich3-test/**,**/*.xml
 
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
