git ignore the newly activated MPICH3 tests

--- a/.gitignore
+++ b/.gitignore
@@ -440,6 +440,7 @@ teshsuite/smpi/isp/umpire/waitall-deadlock
 teshsuite/smpi/isp/umpire/waitany-deadlock
 teshsuite/smpi/isp/umpire/wait-deadlock
 teshsuite/smpi/mpich3-test/attr/attr2type
+teshsuite/smpi/mpich3-test/attr/attrdeleteget
 teshsuite/smpi/mpich3-test/attr/attrend
 teshsuite/smpi/mpich3-test/attr/attrend2
 teshsuite/smpi/mpich3-test/attr/attrerr
@@ -458,6 +459,7 @@ teshsuite/smpi/mpich3-test/attr/fkeyvaltype
 teshsuite/smpi/mpich3-test/attr/keyval_double_free
 teshsuite/smpi/mpich3-test/coll/allgather2
 teshsuite/smpi/mpich3-test/coll/allgather3
+teshsuite/smpi/mpich3-test/coll/allgather_struct
 teshsuite/smpi/mpich3-test/coll/allgatherv2
 teshsuite/smpi/mpich3-test/coll/allgatherv3
 teshsuite/smpi/mpich3-test/coll/allgatherv4
@@ -476,6 +478,9 @@ teshsuite/smpi/mpich3-test/coll/alltoallw2
 teshsuite/smpi/mpich3-test/coll/alltoallw_zeros
 teshsuite/smpi/mpich3-test/coll/bcast2
 teshsuite/smpi/mpich3-test/coll/bcast3
+teshsuite/smpi/mpich3-test/coll/bcast_comm_world
+teshsuite/smpi/mpich3-test/coll/bcast_full
+teshsuite/smpi/mpich3-test/coll/bcast_min_datatypes
 teshsuite/smpi/mpich3-test/coll/bcasttest
 teshsuite/smpi/mpich3-test/coll/bcastzerotype
 teshsuite/smpi/mpich3-test/coll/coll10
@@ -495,6 +500,7 @@ teshsuite/smpi/mpich3-test/coll/exscan2
 teshsuite/smpi/mpich3-test/coll/gather
 teshsuite/smpi/mpich3-test/coll/gather2
 teshsuite/smpi/mpich3-test/coll/gather2_save
+teshsuite/smpi/mpich3-test/coll/gather_big
 teshsuite/smpi/mpich3-test/coll/iallred
 teshsuite/smpi/mpich3-test/coll/ibarrier
 teshsuite/smpi/mpich3-test/coll/icallgather
@@ -584,8 +590,10 @@ teshsuite/smpi/mpich3-test/datatype/getpartelm
 teshsuite/smpi/mpich3-test/datatype/hindexed_block
 teshsuite/smpi/mpich3-test/datatype/hindexed_block_contents
 teshsuite/smpi/mpich3-test/datatype/hindexed-zeros
+teshsuite/smpi/mpich3-test/datatype/hvecblklen
 teshsuite/smpi/mpich3-test/datatype/indexed-misc
 teshsuite/smpi/mpich3-test/datatype/large-count
+teshsuite/smpi/mpich3-test/datatype/large_vec
 teshsuite/smpi/mpich3-test/datatype/lbub
 teshsuite/smpi/mpich3-test/datatype/localpack
 teshsuite/smpi/mpich3-test/datatype/longdouble
@@ -623,6 +631,7 @@ teshsuite/smpi/mpich3-test/datatype/typelb
 teshsuite/smpi/mpich3-test/datatype/typename
 teshsuite/smpi/mpich3-test/datatype/unpack
 teshsuite/smpi/mpich3-test/datatype/unusual-noncontigs
+teshsuite/smpi/mpich3-test/datatype/vecblklen
 teshsuite/smpi/mpich3-test/datatype/zero-blklen-vector
 teshsuite/smpi/mpich3-test/datatype/zeroblks
 teshsuite/smpi/mpich3-test/datatype/zeroparms
@@ -715,6 +724,7 @@ teshsuite/smpi/mpich3-test/group/gtranks
 teshsuite/smpi/mpich3-test/group/gtranksperf
 teshsuite/smpi/mpich3-test/info/infodel
 teshsuite/smpi/mpich3-test/info/infodup
+teshsuite/smpi/mpich3-test/info/infoget
 teshsuite/smpi/mpich3-test/info/infomany
 teshsuite/smpi/mpich3-test/info/infomany2
 teshsuite/smpi/mpich3-test/info/infoorder
@@ -730,6 +740,10 @@ teshsuite/smpi/mpich3-test/init/library_version
 teshsuite/smpi/mpich3-test/init/timeout
 teshsuite/smpi/mpich3-test/init/version
 teshsuite/smpi/mpich3-test/perf/commcreatep
+teshsuite/smpi/mpich3-test/perf/dtpack
+teshsuite/smpi/mpich3-test/perf/indexperf
+teshsuite/smpi/mpich3-test/perf/nestvec
+teshsuite/smpi/mpich3-test/perf/nestvec2
 teshsuite/smpi/mpich3-test/perf/non_zero_root
 teshsuite/smpi/mpich3-test/perf/sendrecvl
 teshsuite/smpi/mpich3-test/perf/timer
@@ -745,21 +759,27 @@ teshsuite/smpi/mpich3-test/pt2pt/bsend5
 teshsuite/smpi/mpich3-test/pt2pt/bsendalign
 teshsuite/smpi/mpich3-test/pt2pt/bsendfrag
 teshsuite/smpi/mpich3-test/pt2pt/bsendpending
+teshsuite/smpi/mpich3-test/pt2pt/cancelanysrc
 teshsuite/smpi/mpich3-test/pt2pt/cancelrecv
+teshsuite/smpi/mpich3-test/pt2pt/dtype_send
 teshsuite/smpi/mpich3-test/pt2pt/eagerdt
 teshsuite/smpi/mpich3-test/pt2pt/greq1
 teshsuite/smpi/mpich3-test/pt2pt/icsend
 teshsuite/smpi/mpich3-test/pt2pt/inactivereq
+teshsuite/smpi/mpich3-test/pt2pt/isendirecv
 teshsuite/smpi/mpich3-test/pt2pt/isendself
 teshsuite/smpi/mpich3-test/pt2pt/isendselfprobe
 teshsuite/smpi/mpich3-test/pt2pt/issendselfcancel
 teshsuite/smpi/mpich3-test/pt2pt/large_message
+teshsuite/smpi/mpich3-test/pt2pt/many_isend
+teshsuite/smpi/mpich3-test/pt2pt/manylmt
 teshsuite/smpi/mpich3-test/pt2pt/mprobe
 teshsuite/smpi/mpich3-test/pt2pt/pingping
 teshsuite/smpi/mpich3-test/pt2pt/probenull
 teshsuite/smpi/mpich3-test/pt2pt/probe-unexp
 teshsuite/smpi/mpich3-test/pt2pt/pscancel
 teshsuite/smpi/mpich3-test/pt2pt/rcancel
+teshsuite/smpi/mpich3-test/pt2pt/recv_any
 teshsuite/smpi/mpich3-test/pt2pt/rqfreeb
 teshsuite/smpi/mpich3-test/pt2pt/rqstatus
 teshsuite/smpi/mpich3-test/pt2pt/scancel
@@ -775,11 +795,16 @@ teshsuite/smpi/mpich3-test/pt2pt/waittestnull
 teshsuite/smpi/mpich3-test/rma/accfence1
 teshsuite/smpi/mpich3-test/rma/accfence2
 teshsuite/smpi/mpich3-test/rma/accfence2_am
+teshsuite/smpi/mpich3-test/rma/acc-pairtype
 teshsuite/smpi/mpich3-test/rma/accpscw1
 teshsuite/smpi/mpich3-test/rma/allocmem
+teshsuite/smpi/mpich3-test/rma/at_complete
 teshsuite/smpi/mpich3-test/rma/epochtest
 teshsuite/smpi/mpich3-test/rma/getfence1
 teshsuite/smpi/mpich3-test/rma/getgroup
+teshsuite/smpi/mpich3-test/rma/large-small-acc
+teshsuite/smpi/mpich3-test/rma/lock_nested
+teshsuite/smpi/mpich3-test/rma/manyget
 teshsuite/smpi/mpich3-test/rma/manyrma3
 teshsuite/smpi/mpich3-test/rma/nullpscw
 teshsuite/smpi/mpich3-test/rma/putfence1
