sonar: another try at ignoring the coverage of XML files

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -68,8 +68,8 @@ sonar.cfamily.build-wrapper-output=bw-outputs
 sonar.cfamily.gcov.reportsPath=Testing/CoverageInfo
 # Files to ignore from coverage analysis:
 #   - foreign test suites
-#   - xml files
-sonar.coverage.exclusions=teshsuite/smpi/isp/**,teshsuite/smpi/mpich3-test/**,**/*.xml
+#   - platform files (I fail to get sonar ignore *.xml files)
+sonar.coverage.exclusions=teshsuite/smpi/isp/**,teshsuite/smpi/mpich3-test/**,examples/platforms/**
 
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
