--- a/include/smpi/mpif.h.in
+++ b/include/smpi/mpif.h.in
@@ -148,8 +148,7 @@
       integer MPI_2INTEGER, MPI_LOGICAL1, MPI_LOGICAL2, MPI_LOGICAL4
       integer MPI_LOGICAL8, MPI_2REAL, MPI_2DOUBLE_PRECISION
       integer MPI_AINT, MPI_OFFSET, MPI_COUNT
-      integer MPI_REAL16, MPI_COMPLEX8,MPI_COMPLEX16,MPI_COMPLEX32
-      integer MPI_PACKED
+      integer MPI_REAL16, MPI_PACKED
       parameter(MPI_DATATYPE_NULL=-1)
       parameter(MPI_BYTE=0)
       parameter(MPI_CHARACTER=1)
@@ -176,10 +175,8 @@
       parameter(MPI_OFFSET=22)
       parameter(MPI_COUNT=23)
       parameter(MPI_REAL16=24)
-      parameter(MPI_COMPLEX8=25)
-      parameter(MPI_COMPLEX16=26)
-      parameter(MPI_COMPLEX32=27)
-      parameter(MPI_PACKED=28)
+      parameter(MPI_PACKED=25)
+
 
 ! These should be ordered as in smpi_f77.c
       integer MPI_OP_NULL,MPI_MAX, MPI_MIN, MPI_MAXLOC, MPI_MINLOC
