sonar: ignore the MPI collectives in their new locations

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -54,7 +54,7 @@ sonar.issue.ignore.multicriteria.c3.resourceKey=include/smpi/smpi_extended_trace
 #  - Collectives that we borrowed elsewhere (mpich, openMPI and other implems)
 #  - the NAS, that are included in our examples
 #  - RngStream, that is included in SimGrid
-sonar.exclusions=src/*_unit.c*,teshsuite/smpi/mpich3-test/**,teshsuite/smpi/isp/**,**/*_dtd.c,**/*_dtd.h,**/*yy.c,src/xbt/automaton/parserPromela.tab.*,src/smpi/colls/*,examples/smpi/NAS/*,src/xbt/RngStream.c,include/xbt/RngStream.h
+sonar.exclusions=src/*_unit.c*,teshsuite/smpi/mpich3-test/**,teshsuite/smpi/isp/**,**/*_dtd.c,**/*_dtd.h,**/*yy.c,src/xbt/automaton/parserPromela.tab.*,src/smpi/colls/**/*,examples/smpi/NAS/*,src/xbt/RngStream.c,include/xbt/RngStream.h
 
 # Exclude our examples from the duplication detection.
 # Examples are expected to be somehow repetitive
