--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,7 +13,7 @@ sonar.sources=src,examples,include,teshsuite
 
 
 # Disable some rules on some files
-sonar.issue.ignore.multicriteria=j1,jni1,jni2,c1,c2,c3
+sonar.issue.ignore.multicriteria=j1,jni1,jni2,c1,c2a,c2b,c3
 
 # The Object.finalize() method should not be overriden
 # But we need to clean the native memory with JNI
@@ -37,8 +37,10 @@ sonar.issue.ignore.multicriteria.c1.resourceKey=**/*.cpp
 
 # Preprocessor operators "#" and "##" should not be used
 # This poses portability issues, but we test on a large panel of architectures on purpose
-sonar.issue.ignore.multicriteria.c2.ruleKey=cpp:PPStringifyAndPastingUsage
-sonar.issue.ignore.multicriteria.c2.resourceKey=**/*.cpp
+sonar.issue.ignore.multicriteria.c2a.ruleKey=cpp:PPStringifyAndPastingUsage
+sonar.issue.ignore.multicriteria.c2a.resourceKey=**/*.cpp
+sonar.issue.ignore.multicriteria.c2b.ruleKey=cpp:PPStringifyAndPastingUsage
+sonar.issue.ignore.multicriteria.c2b.resourceKey=**/*.hpp
 
 # Macro names should comply with a naming convention
 # But the macros in this file are named after the MPI standard
