sonar: ignore missing namespaces in examples

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,7 +13,7 @@ sonar.sources=src,examples,include,teshsuite
 
 
 # Disable some rules on some files
-sonar.issue.ignore.multicriteria=j1,jni1,jni2,c1,c2a,c2b,c3
+sonar.issue.ignore.multicriteria=j1,jni1,jni2,c1,c2a,c2b,c3,c4a,c4b
 
 # The Object.finalize() method should not be overriden
 # But we need to clean the native memory with JNI
@@ -47,6 +47,12 @@ sonar.issue.ignore.multicriteria.c2b.resourceKey=**/*.hpp
 sonar.issue.ignore.multicriteria.c3.ruleKey=c:PPMacroName
 sonar.issue.ignore.multicriteria.c3.resourceKey=include/smpi/smpi_extended_traces.h
 
+# Declarations should be placed in a namespace
+# But examples are intended to remain small and simple
+sonar.issue.ignore.multicriteria.c4a.ruleKey=cpp:GlobalNamespaceMembers 
+sonar.issue.ignore.multicriteria.c4a.resourceKey=examples/**/*.cpp
+sonar.issue.ignore.multicriteria.c4b.ruleKey=cpp:GlobalNamespaceMembers 
+sonar.issue.ignore.multicriteria.c4b.resourceKey=examples/**/*.hpp
 
 
 # Exclude some files from the analysis:
