support MPI_Op_commutative call, as it was already implemented internally

--- a/teshsuite/smpi/mpich3-test/coll/CMakeLists.txt
+++ b/teshsuite/smpi/mpich3-test/coll/CMakeLists.txt
@@ -80,7 +80,7 @@ if(enable_smpi AND enable_smpi_MPICH3_testsuite)
 #  add_executable(opband opband.c)
 #  add_executable(opbor opbor.c)
 #  add_executable(opbxor opbxor.c)
-#  add_executable(op_commutative op_commutative.c)
+  add_executable(op_commutative op_commutative.c)
 #  add_executable(opland opland.c)
 #  add_executable(oplor oplor.c)
 #  add_executable(oplxor oplxor.c)
@@ -172,7 +172,7 @@ if(enable_smpi AND enable_smpi_MPICH3_testsuite)
 #  target_link_libraries(opband  simgrid mtest_c)
 #  target_link_libraries(opbor  simgrid mtest_c)
 #  target_link_libraries(opbxor  simgrid mtest_c)
-#  target_link_libraries(op_commutative  simgrid mtest_c)
+  target_link_libraries(op_commutative  simgrid mtest_c)
 #  target_link_libraries(opland  simgrid mtest_c)
 #  target_link_libraries(oplor  simgrid mtest_c)
 #  target_link_libraries(oplxor  simgrid mtest_c)
