one more conversion

--- a/teshsuite/s4u/CMakeLists.txt
+++ b/teshsuite/s4u/CMakeLists.txt
@@ -1,4 +1,4 @@
-foreach(x actor concurrent_rw listen_async pid)
+foreach(x actor concurrent_rw host_on_off_wait listen_async pid)
   add_executable       (${x}  ${x}/${x}.cpp)
   target_link_libraries(${x}  simgrid)
   set_target_properties(${x}  PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${x})
@@ -11,6 +11,6 @@ set(teshsuite_src ${teshsuite_src}  PARENT_SCOPE)
 set(tesh_files    ${tesh_files}     PARENT_SCOPE)
 set(xml_files     ${xml_files}      PARENT_SCOPE)
 
-foreach(x actor concurrent_rw listen_async pid)
+foreach(x actor concurrent_rw host_on_off_wait listen_async pid)
   ADD_TESH_FACTORIES(tesh-s4u-${x} "thread;boost;ucontext;raw" --setenv srcdir=${CMAKE_HOME_DIRECTORY}/teshsuite/s4u/${x} --cd ${CMAKE_BINARY_DIR}/teshsuite/s4u/${x} ${CMAKE_HOME_DIRECTORY}/teshsuite/s4u/${x}/${x}.tesh)
 endforeach()
