portable implementation of sendfile

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -341,6 +341,14 @@ else()
   set(HAVE_THREAD_LOCAL_STORAGE 0)
 endif()
 
+CHECK_INCLUDE_FILE("sys/sendfile.h" HAVE_SENDFILE_H)
+CHECK_FUNCTION_EXISTS(sendfile HAVE_SENDFILE)
+if(HAVE_SENDFILE_H AND HAVE_SENDFILE)
+  set(HAVE_SENDFILE 1)
+else()
+  set(HAVE_SENDFILE 0)
+endif()
+
 if(enable_model-checking AND NOT "${CMAKE_SYSTEM}" MATCHES "Linux|FreeBSD")
   message(WARNING "Support for model-checking has not been enabled on ${CMAKE_SYSTEM}: disabling it")
   set(enable_model-checking FALSE)
