ignore newly activated mpich tests

--- a/.gitignore
+++ b/.gitignore
@@ -773,6 +773,8 @@ teshsuite/smpi/mpich3-test/pt2pt/cancelrecv
 teshsuite/smpi/mpich3-test/pt2pt/dtype_send
 teshsuite/smpi/mpich3-test/pt2pt/eagerdt
 teshsuite/smpi/mpich3-test/pt2pt/greq1
+teshsuite/smpi/mpich3-test/pt2pt/huge_anysrc
+teshsuite/smpi/mpich3-test/pt2pt/huge_underflow
 teshsuite/smpi/mpich3-test/pt2pt/icsend
 teshsuite/smpi/mpich3-test/pt2pt/inactivereq
 teshsuite/smpi/mpich3-test/pt2pt/isendirecv
@@ -801,6 +803,61 @@ teshsuite/smpi/mpich3-test/pt2pt/sendrecv3
 teshsuite/smpi/mpich3-test/pt2pt/sendself
 teshsuite/smpi/mpich3-test/pt2pt/waitany-null
 teshsuite/smpi/mpich3-test/pt2pt/waittestnull
+teshsuite/smpi/mpich3-test/rma/acc-loc
+teshsuite/smpi/mpich3-test/rma/adlb_mimic1
+teshsuite/smpi/mpich3-test/rma/attrorderwin
+teshsuite/smpi/mpich3-test/rma/badrma
+teshsuite/smpi/mpich3-test/rma/baseattrwin
+teshsuite/smpi/mpich3-test/rma/compare_and_swap
+teshsuite/smpi/mpich3-test/rma/contention_put
+teshsuite/smpi/mpich3-test/rma/contention_putget
+teshsuite/smpi/mpich3-test/rma/contig_displ
+teshsuite/smpi/mpich3-test/rma/fetch_and_op
+teshsuite/smpi/mpich3-test/rma/fkeyvalwin
+teshsuite/smpi/mpich3-test/rma/flush
+teshsuite/smpi/mpich3-test/rma/get-struct
+teshsuite/smpi/mpich3-test/rma/get_acc_local
+teshsuite/smpi/mpich3-test/rma/get_accumulate
+teshsuite/smpi/mpich3-test/rma/linked_list_bench_lock_all
+teshsuite/smpi/mpich3-test/rma/linked_list_bench_lock_excl
+teshsuite/smpi/mpich3-test/rma/lock_contention_dt
+teshsuite/smpi/mpich3-test/rma/lock_dt
+teshsuite/smpi/mpich3-test/rma/lock_dt_flush
+teshsuite/smpi/mpich3-test/rma/lock_dt_flushlocal
+teshsuite/smpi/mpich3-test/rma/lockall_dt
+teshsuite/smpi/mpich3-test/rma/lockall_dt_flush
+teshsuite/smpi/mpich3-test/rma/lockall_dt_flushall
+teshsuite/smpi/mpich3-test/rma/lockall_dt_flushlocal
+teshsuite/smpi/mpich3-test/rma/lockall_dt_flushlocalall
+teshsuite/smpi/mpich3-test/rma/lockcontention
+teshsuite/smpi/mpich3-test/rma/lockcontention2
+teshsuite/smpi/mpich3-test/rma/locknull
+teshsuite/smpi/mpich3-test/rma/lockopts
+teshsuite/smpi/mpich3-test/rma/manyrma2
+teshsuite/smpi/mpich3-test/rma/pscw_ordering
+teshsuite/smpi/mpich3-test/rma/put_base
+teshsuite/smpi/mpich3-test/rma/put_bottom
+teshsuite/smpi/mpich3-test/rma/racc_local_comp
+teshsuite/smpi/mpich3-test/rma/req_example
+teshsuite/smpi/mpich3-test/rma/rma-contig
+teshsuite/smpi/mpich3-test/rma/rmanull
+teshsuite/smpi/mpich3-test/rma/rmazero
+teshsuite/smpi/mpich3-test/rma/rput_local_comp
+teshsuite/smpi/mpich3-test/rma/selfrma
+teshsuite/smpi/mpich3-test/rma/strided_acc_indexed
+teshsuite/smpi/mpich3-test/rma/strided_acc_onelock
+teshsuite/smpi/mpich3-test/rma/strided_get_indexed
+teshsuite/smpi/mpich3-test/rma/strided_getacc_indexed
+teshsuite/smpi/mpich3-test/rma/strided_putget_indexed
+teshsuite/smpi/mpich3-test/rma/test3_am
+teshsuite/smpi/mpich3-test/rma/test4
+teshsuite/smpi/mpich3-test/rma/test4_am
+teshsuite/smpi/mpich3-test/rma/transpose3_shm
+teshsuite/smpi/mpich3-test/rma/transpose4
+teshsuite/smpi/mpich3-test/rma/transpose5
+teshsuite/smpi/mpich3-test/rma/win_dynamic_acc
+teshsuite/smpi/mpich3-test/rma/win_info
+teshsuite/smpi/mpich3-test/rma/winname
 teshsuite/smpi/mpich3-test/rma/accfence1
 teshsuite/smpi/mpich3-test/rma/accfence2
 teshsuite/smpi/mpich3-test/rma/accfence2_am
